force-app/main/default/objects/cgcloud__Payment__c/cgcloud__Payment__c.object-meta.xml
<CustomObject>
    <description>This Object reflects the value retailers expected as compensation for running promotions, which are executed using tactics.</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>PAY-{0000000000}</displayFormat>
        <label>Claim</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>