force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Addendum_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Addendum_Reference__c</fullName>
    <description>Reference to the previous deduction addendum, if applicable.</description>
    <label>Addendum Reference</label>
    <length>256</length>
    <type>Html</type>
</CustomField>