force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Adjustment_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Adjustment_Reference__c</fullName>
    <description>Reference to the adjusted payment or deduction on the original payment.</description>
    <label>Adjustment Reference</label>
    <length>256</length>
    <type>Html</type>
</CustomField>