force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Adjustment_Type__c</fullName>
    <description>Specifies the type of adjustment.</description>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Reversal</fullName>
            </value>
            <value>
                <fullName>Deduction Addendum</fullName>
            </value>
            <value>
                <fullName>Deduction Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>