force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Balance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Balance__c</fullName>
    <formula>cgcloud__Payment_Amount__c  -  (  cgcloud__Total_Tactic_Payout_Amount__c  +  cgcloud__Rejected_Amount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>