force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Date_Thru_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Thru_Reference_Date__c</fullName>
    <formula>cgcloud__Reference_Date__c +  cgcloud__Payment_Template__r.cgcloud__Date_Thru_Offset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Thru Reference Date</label>
    <type>Date</type>
</CustomField>