force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Default_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Anchor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Anchor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Default Anchor)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>