force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__ERP_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ERP_Status__c</fullName>
    <externalId>true</externalId>
    <label>ERP Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>