force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__ERP_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__ERP_Status_Date__c</fullName>
    <label>ERP Status Date</label>
    <type>Date</type>
</CustomField>