force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__External_ID__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>