force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Family_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Family_Status__c</fullName>
    <formula>IF( OR(RecordType.Name == &apos;Parent&apos;, RecordType.Name == &apos;ParentView&apos;) , &apos;Parent&apos;, (IF(ISBLANK(cgcloud__Parent_Payment__c), &apos;Orphan&apos;, &apos;Adopted&apos;)))</formula>
    <label>Family Status</label>
    <type>Text</type>
</CustomField>