force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Int_Ref_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Int_Ref_Date__c</fullName>
    <label>Int. Ref. Date</label>
    <type>Date</type>
</CustomField>