force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Set__c</fullName>
    <formula>cgcloud__Payment_Template__r.cgcloud__KPI_Set__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Set</label>
    <type>Text</type>
</CustomField>