force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__KPIs_Outdated__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPIs_Outdated__c</fullName>
    <formula>cgcloud__Version__c &lt;&gt; cgcloud__Offplatform_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPIs Outdated</label>
    <type>Checkbox</type>
</CustomField>