force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Linked_Tactics_Count__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Linked_Tactics_Count__c</fullName>
    <label>Linked Tactics Count</label>
    <summaryForeignKey>cgcloud__Payment_Tactic__c.cgcloud__Payment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>