force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Offset_Summary__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Offset_Summary__c</fullName>
    <label>Offset Summary</label>
    <summarizedField>cgcloud__Payment_Tactic__c.cgcloud__Amount_Offset__c</summarizedField>
    <summaryForeignKey>cgcloud__Payment_Tactic__c.cgcloud__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>