force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Original_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Original_Reference__c</fullName>
    <description>Reference to the original payment or deduction on the adjusted payment.</description>
    <label>Original Reference</label>
    <length>256</length>
    <type>Html</type>
</CustomField>