force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Parent_Payment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Claim</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>cgcloud__Payment__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Payment__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>ParentView</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Payment__c</referenceTo>
    <relationshipLabel>Child Claims</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>