force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Age__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Age__c</fullName>
    <description>Calculates how old a payment record is in terms of days.</description>
    <formula>TODAY()  -  cgcloud__Reference_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>