force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Amount__c</fullName>
    <label>Claim Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>