force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Anchor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Claim Anchor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Anchors</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>