force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Anchor_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Anchor_Number__c</fullName>
    <formula>cgcloud__Payment_Anchor__r.cgcloud__Account_Number__c</formula>
    <label>Claim Anchor Number</label>
    <type>Text</type>
</CustomField>