force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <label>Submitted for Approval</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>ToBeClosed</fullName>
                <label>To Be Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>