force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Tactic_Fund_Summary__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Tactic_Fund_Summary__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Claim Tactic Fund Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>