force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Template</label>
    <referenceTo>cgcloud__Payment_Template__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>