force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Type__c</fullName>
    <formula>TEXT(cgcloud__Payment_Template__r.cgcloud__Payment_Type__c)</formula>
    <label>Claim Type</label>
    <type>Text</type>
</CustomField>