force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Planning_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Planning_Anchor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Value determined by Payment Anchor</inlineHelpText>
    <label>Planning Anchor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planning Anchors</relationshipLabel>
    <relationshipName>Planning_Anchors1</relationshipName>
    <type>Lookup</type>
</CustomField>