force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Planning_Anchor_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Planning_Anchor_Number__c</fullName>
    <formula>cgcloud__Planning_Anchor__r.cgcloud__Account_Number__c</formula>
    <label>Planning Anchor Number</label>
    <type>Text</type>
</CustomField>