force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Pre_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pre_Adjustment_Amount__c</fullName>
    <description>Specifies the deduction&apos;s amount prior to adjusting and creating the deduction addendum.</description>
    <label>Pre-Adjustment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>