force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reference_Date__c</fullName>
    <label>Reference Date</label>
    <type>Date</type>
</CustomField>