force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Rejected_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rejected_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rejected Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>