force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Should_Adjust_Overspent_Claim__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Adjust_Overspent_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the claim is overspent and needs to be adjusted within the overspend threshold limit. This is a system-managed field.</description>
    <label>Adjust Overspent Claim</label>
    <type>Checkbox</type>
</CustomField>