force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Skip_Version_Update__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Skip_Version_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to skip the version update. This flag will always be stored as FALSE on database but the input value will be checked to detect if the version must be upgraded or not.</description>
    <label>Skip Version Update</label>
    <type>Checkbox</type>
</CustomField>