force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Total_Tactic_Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Total_Tactic_Payout_Amount__c</fullName>
    <label>Total Payout</label>
    <summarizedField>cgcloud__Payment_Tactic__c.cgcloud__Tactic_Payout__c</summarizedField>
    <summaryForeignKey>cgcloud__Payment_Tactic__c.cgcloud__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>