force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Vendor_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Vendor_Anchor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Anchor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Vendor Anchor)</relationshipLabel>
    <relationshipName>Payments_Vendor_Anchor</relationshipName>
    <type>Lookup</type>
</CustomField>