force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Vendor_Anchor_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Vendor_Anchor_Number__c</fullName>
    <formula>cgcloud__Vendor_Anchor__r.cgcloud__Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Anchor Number</label>
    <type>Text</type>
</CustomField>