force-app/main/default/objects/cgcloud__Payment__c/fields/cgcloud__Version__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Version__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Version of the payment</description>
    <label>Version</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>