force-app/main/default/objects/cgcloud__Payment__c/recordTypes/cgcloud__Interfaced.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Interfaced</fullName>
    <active>true</active>
    <label>Interfaced</label>
</RecordType>