force-app/main/default/objects/cgcloud__Payment__c/recordTypes/cgcloud__Manual.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Manual</fullName>
    <active>true</active>
    <label>Manual</label>
</RecordType>