force-app/main/default/objects/cgcloud__Payment__c/recordTypes/cgcloud__Parent.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Parent</fullName>
    <active>true</active>
    <label>Parent</label>
</RecordType>