force-app/main/default/objects/cgcloud__Payment__c/recordTypes/cgcloud__Payment_Reversal.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Payment_Reversal</fullName>
    <active>true</active>
    <label>Payment Reversal</label>
</RecordType>