force-app/main/default/objects/cgcloud__Payment__c/recordTypes/cgcloud__Payment_ReversalView.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Payment_ReversalView</fullName>
    <active>true</active>
    <description>The Sales Org of the Payment is Payment Overwrite enabled and Payment Adjustment Type is payment reversal or Payment Status is set to either closed or to be closed or cancelled or adjusted.</description>
    <label>Payment ReversalView</label>
</RecordType>