force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Parent_Anchor_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Parent_Anchor_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE, RecordType.Name = &apos;Parent&apos;, ISCHANGED( cgcloud__Payment_Anchor__c ) )</errorConditionFormula>
    <errorMessage>Payment Anchor cannot be changed.</errorMessage>
</ValidationRule>