force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Payment_Amount_Null_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Amount_Null_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW(), RecordType.Name = &apos;Manual&apos;,ISBLANK(PRIORVALUE(cgcloud__Payment_Amount__c)),  cgcloud__Payment_Amount__c &lt; 0  )</errorConditionFormula>
    <errorDisplayField>cgcloud__Payment_Amount__c</errorDisplayField>
    <errorMessage>The amount must remain positive in a positive payment.</errorMessage>
</ValidationRule>