force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Payment_Amount_Remain_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Amount_Remain_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &apos;Manual&apos;,PRIORVALUE( cgcloud__Payment_Amount__c  ) &gt;= 0,  OR(cgcloud__Payment_Amount__c  &lt; 0,  ISBLANK(cgcloud__Payment_Amount__c)))</errorConditionFormula>
    <errorDisplayField>cgcloud__Payment_Amount__c</errorDisplayField>
    <errorMessage>The amount must remain positive in a positive payment.</errorMessage>
</ValidationRule>