force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Payment_Anchor_Template_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Anchor_Template_Sales_Org</fullName>
    <active>true</active>
    <description>Validation of Payment Anchor Template Sales Org Matches</description>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,cgcloud__Payment_Anchor__r.cgcloud__Sales_Org__c   &lt;&gt; cgcloud__Payment_Template__r.cgcloud__Sales_Org__r.Name)</errorConditionFormula>
    <errorMessage>Payment Anchor and Payment Template on a Payment record should belong to same Sales Org.</errorMessage>
</ValidationRule>