force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Payment_Template_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Template_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      ISCHANGED( cgcloud__Payment_Template__c )
      )</errorConditionFormula>
    <errorMessage>Payment Template cannot be changed.</errorMessage>
</ValidationRule>