force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Payment_Template_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Payment_Template_Required</fullName>
    <active>true</active>
    <description>Payment Template Required</description>
    <errorConditionFormula>AND( $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE, ISBLANK( cgcloud__Payment_Template__c ))</errorConditionFormula>
    <errorDisplayField>cgcloud__Payment_Template__c</errorDisplayField>
    <errorMessage>Payment Template Required</errorMessage>
</ValidationRule>