force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Rejected_Amount_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Rejected_Amount_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
      ISNULL( cgcloud__Rejected_Amount__c )
      )</errorConditionFormula>
    <errorMessage>Rejected Amount value cannot be null.</errorMessage>
</ValidationRule>