force-app/main/default/objects/cgcloud__Payment__c/validationRules/cgcloud__Reversal_Anchor_Date_Amount_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Reversal_Anchor_Date_Amount_Read_Only</fullName>
    <active>true</active>
    <description>Validation rule to prevent required fields to be modified for Payment Reversals.</description>
    <errorConditionFormula>AND( $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE, RecordType.DeveloperName  = &apos;Payment_Reversal&apos;, OR( ISCHANGED( cgcloud__Payment_Anchor__c), ISCHANGED( cgcloud__Reference_Date__c ), ISCHANGED( cgcloud__Payment_Amount__c) ) )</errorConditionFormula>
    <errorMessage>Payment reversals cannot be edited.</errorMessage>
</ValidationRule>