force-app/main/default/objects/cgcloud__Payment__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Planning_Anchor__c</columns>
    <columns>cgcloud__Payment_Anchor__c</columns>
    <columns>cgcloud__Payment_Anchor_Number__c</columns>
    <columns>cgcloud__Payment_Template__c</columns>
    <columns>cgcloud__External_ID__c</columns>
    <columns>cgcloud__Payment_Amount__c</columns>
    <columns>cgcloud__Balance__c</columns>
    <columns>cgcloud__Reference_Date__c</columns>
    <columns>cgcloud__Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>